@@ -114,7 +114,7 @@ main (int argc, const char *argv[])
   m = 50;
   while (1)
     {
-      uint8_t s[128];
+      uint8_t s[LINEBUFSIZE];
 
       u = 1;
       tty_wait_connection (tty);
