@@ -1,3 +1,7 @@
+2016-05-18  NIIBE Yutaka  <gniibe@fsij.org>
+
+	* example-cdc/usb-cdc.c: Prepare multiple TTYs.
+
 2016-05-17  NIIBE Yutaka  <gniibe@fsij.org>
 
 	* example-cdc/usb-cdc.c: Update as TTY input/output with line
